# ktds_ms_ai_mvp

./: .deployment  README.md  app.py  pyproject.toml  requirements.txt  sample_data.py  streamlit.sh
data/: incident_reports_2.csv
