[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.34.0",
    "azure-search-documents>=11.5.2",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "openai>=1.88.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
]
